--- a/.style/style.css
+++ b/.style/style.css
@@ -13,17 +13,20 @@ body{
 
 main{
     height: 100vh;
-    background-color: blue;
+    background-color: black;
     position: relative;
+    background-image: url('../images/fundo-madeira.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     
 }
 
 
 #phone{
     position: absolute;
-    background-color: violet;
-    height: 500px;
-    width: 200px;
+    background-image: url('../images/frame-iphone.png');
+    height: 627px;
+    width: 311px;
     left: 50%;
     top: 50%;
     transform: translate(-50% ,-50%);
