--- a/.style/style.css
+++ b/.style/style.css
@@ -42,3 +42,23 @@ iframe#tela{
     width: 267px;
     height: 470px;
 }
+
+section#redes-sociais{
+    text-align:right;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 5px black;
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.877);
+    transform: translate(-5px, -5px);
+    box-shadow: 5px 5px 10px black;
+    transition: transform 0.5s, border 1s;
+
+}
