--- a/.style/style.css
+++ b/.style/style.css
@@ -53,6 +53,7 @@ section#redes-sociais img{
     margin: 10px;
     box-shadow: 2px 2px 5px black;
     box-sizing: border-box;
+    
 }
 
 section#redes-sociais img:hover{
@@ -62,3 +63,5 @@ section#redes-sociais img:hover{
     transition: transform 0.5s, border 1s;
 
 }
+
+section#redes-sociais
